[package]
name = "image_conversion"
version = "0.1.0"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawloader = "0.36.2"
image = "0.23.9"
byteorder = "1.3.4"
rgb = "0.8"